--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1612.0",
+    "mammoth": "^1.7.2",
+    "next": "14.2.3",
+    "pako": "^2.1.0",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "postcss": "^8",
